# HEggLog

./: .gitignore  LICENSE  README.md  hegglog.cabal
.github/workflows/: ci.yml
docs/: architecture.md  compiler-readiness-audit.md  current-capabilities.md  diagnostics-spec.md  e2e-results.md  e2e-wet-testing.md  egglog-backend.md  egglog-core-optimizer-plan.md  egglog-engine-spec.md  full-compiler-definition.md  haskell2010-conformance-matrix.md  haskell2010-conformance-results.md  haskell2010-ffi-design.md  haskell2010-frontend-spec.md  haskell2010-implementation-plan.md  haskell2010-module-compilation-boundary.md  haskell2010-roadmap.md  haskell2010-standard-library-layout.md  haskell2010-status-summary.md  haskell2010-todo.json  haskell2010-todo.md  index.md  language-spec.md  laziness-and-stg-plan.md  llvm-backend-spec.md  llvm-backend.md  optimizer-spec.md  roadmap.md  runtime-spec.md  type-inference.md
examples/: add.hg  higher-order.hg  if.hg  inc.hg  let-bool.hg  test.hg
examples/llvm/: division-overflow.hg  if-comparison.hg  let-chain.hg  nested-if.hg  top-level.hg
examples/type-errors/: let-bool-arithmetic.hg
scripts/: e2e-wet-test.sh  smoke-test.sh  validate-haskell2010-conformance.py  validate-haskell2010-todo.py
src/: Main.hs
src/Analysis/: Facts.hs  InferFacts.hs
src/Backend/: ClosureConvert.hs  Compile.hs  IR.hs  LambdaLift.hs  Lower.hs  Pretty.hs  Validate.hs
src/Backend/LLVM/: Emit.hs  IR.hs  Lower.hs  Toolchain.hs  Validate.hs
src/CLI/: Command.hs  Compile.hs  Report.hs
src/Egglog/: Database.hs  Eval.hs  Extract.hs  Function.hs  Pattern.hs  Pretty.hs  Rebuild.hs  Rule.hs  Sort.hs  UnionFind.hs  Value.hs
src/Eval/: ANFInterpreter.hs  Interpreter.hs
src/Haskell2010/: Diagnostics.hs  FixedWidth.hs  Layout.hs  Lexer.hs  ModuleGraph.hs  ModuleInterface.hs  Names.hs  Native.hs  Parser.hs  Pretty.hs  Renamed.hs  Renamer.hs  StandardLibrary.hs  Syntax.hs  Typecheck.hs
src/Haskell2010/Core/: Eval.hs  FreeVars.hs  Pretty.hs  Subst.hs  Syntax.hs  Validate.hs
src/Haskell2010/FFI/: LinkMetadata.hs
src/Haskell2010/STG/: Eval.hs  LLVM.hs  Lower.hs  Pretty.hs  Syntax.hs  Validate.hs
src/IR/: ANF.hs  Core.hs
src/IR/ANF/: Resolved.hs  Validate.hs
src/Optimize/: CoreEgglog.hs  EGraph.hs  EgglogBackend.hs  Placeholder.hs  Rewrite.hs  Simplify.hs
src/Optimize/EgglogBackend/: Encode.hs  Extract.hs  Fragment.hs  Reconstruct.hs  Rules.hs  Schema.hs
src/Runtime/: Int.hs
src/Syntax/: AST.hs  Located.hs  Parser.hs  Pretty.hs  Span.hs
src/Typecheck/: Infer.hs  Principal.hs  Types.hs
test/: Main.hs
test/e2e/: Main.hs
test/e2e/programs/: boolean-reasoning.hg  capturing-closure.hg  division.hg  egglog-beneficial.hg  higher-order.hg  negative-quotient.hg  subtraction.hg  top-level-function.hg
test/e2e/programs/haskell2010/: adt-box.hs  adt-lazy-field.hs  adt-nested.hs  arithmetic-sequences.hs  arithmetic.hs  bool-case.hs  broad-show.hs  char-main.hs  control-monad.hs  derived-enum-runtime-error.hs  division-by-zero.hs  egglog-known-constructor.hs  fibonacci.hs  guard-fallthrough.hs  guarded-self-recursion.hs  guards-as-patterns.hs  io-normal-examples.hs  io-printing.hs  lazy-argument.hs  lazy-let.hs  list-comprehensions.hs  local-factorial.hs  mutual-recursion.hs  numeric-defaulting.hs  partial-application.hs  pattern-diagnostics.hs  prelude-foldl.hs  prelude-head-empty.hs  prelude-lists.hs  prelude-maybe-ordering.hs  recursive-list.hs  short-circuit.hs  standard-library-modules.hs  string-char-list.hs  tuple-case.hs  typeclass-dictionary.hs  where-layout.hs
test/e2e/programs/runtime-errors/: division-overflow.hg  multiplication-overflow.hg  subtraction-overflow.hg
test/e2e/programs/unsupported/: unsupported-recursion.hg
test/golden/: arithmetic.golden  diagnostic-llvm-lambda.golden  diagnostic-type-add-bool.golden  function.golden  if.golden  llvm-arithmetic.ll  llvm-bool-root.ll  llvm-if-comparison.ll
test/golden/cli-help/: check.txt  compile.txt  emit-core.txt  emit-stg.txt  general.txt  report.txt  run.txt
test/haskell2010-conformance/: Main.hs
test/haskell2010/conformance/: manifest.json
test/haskell2010/conformance/ffi/: static-ccall.hs  (+13 more)
test/native/haskell2010/: ffi_export_helpers.c  ffi_floating_export_helpers.c  ffi_helpers.c  ffi_helpers.h
(+158 files in other folders)
