cabal-version:      3.0
name:               hegglog
version:            0.1.0.0
build-type:         Simple
license:            MIT
license-file:       LICENSE
author:             Drew Melman-Rogers
maintainer:         dmelmanrogers@uchicago.edu
synopsis:           Initial compiler skeleton for HeggLog
description:
    HeggLog is a small typed functional language compiler in Haskell with
    interpreter, ANF, optimization, Egglog, and LLVM backend experiments.
category:           Language

common warnings
  ghc-options:
      -Wall
      -Wcompat
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wredundant-constraints

executable hegglog
  import:           warnings
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
      DerivingStrategies
      LambdaCase
      OverloadedStrings
  build-depends:
      base >= 4.17 && < 5
    , containers >= 0.6 && < 0.8
    , directory >= 1.3 && < 1.4
    , megaparsec >= 9 && < 10
    , mtl >= 2.2 && < 2.4
    , prettyprinter >= 1.7 && < 1.8
    , process >= 1.6 && < 1.7
    , text >= 2.0 && < 2.2
  other-modules:
      Analysis.Facts
      Analysis.InferFacts
      Backend.ClosureConvert
      Backend.Compile
      Backend.IR
      Backend.LambdaLift
      Backend.LLVM.Emit
      Backend.LLVM.IR
      Backend.LLVM.Lower
      Backend.LLVM.Toolchain
      Backend.LLVM.Validate
      Backend.Lower
      Backend.Pretty
      Backend.Validate
      CLI.Report
      Egglog.Database
      Egglog.Eval
      Egglog.Extract
      Egglog.Function
      Egglog.Pattern
      Egglog.Pretty
      Egglog.Rebuild
      Egglog.Rule
      Egglog.Sort
      Egglog.UnionFind
      Egglog.Value
      Eval.ANFInterpreter
      Eval.Interpreter
      IR.ANF
      IR.ANF.Resolved
      IR.ANF.Validate
      IR.Core
      Optimize.EgglogBackend
      Optimize.EgglogBackend.Encode
      Optimize.EgglogBackend.Extract
      Optimize.EgglogBackend.Fragment
      Optimize.EgglogBackend.Reconstruct
      Optimize.EgglogBackend.Rules
      Optimize.EgglogBackend.Schema
      Optimize.EGraph
      Optimize.Placeholder
      Optimize.Rewrite
      Optimize.Simplify
      Runtime.Int
      Syntax.AST
      Syntax.Located
      Syntax.Parser
      Syntax.Pretty
      Syntax.Span
      Typecheck.Infer
      Typecheck.Principal
      Typecheck.Types

test-suite hegglog-test
  import:           warnings
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test, src
  default-language: GHC2021
  default-extensions:
      DerivingStrategies
      LambdaCase
      OverloadedStrings
  build-depends:
      base >= 4.17 && < 5
    , containers >= 0.6 && < 0.8
    , directory >= 1.3 && < 1.4
    , megaparsec >= 9 && < 10
    , mtl >= 2.2 && < 2.4
    , prettyprinter >= 1.7 && < 1.8
    , process >= 1.6 && < 1.7
    , QuickCheck >= 2.14 && < 2.16
    , text >= 2.0 && < 2.2
  other-modules:
      Analysis.Facts
      Analysis.InferFacts
      Backend.ClosureConvert
      Backend.Compile
      Backend.IR
      Backend.LambdaLift
      Backend.LLVM.Emit
      Backend.LLVM.IR
      Backend.LLVM.Lower
      Backend.LLVM.Toolchain
      Backend.LLVM.Validate
      Backend.Lower
      Backend.Pretty
      Backend.Validate
      CLI.Report
      Egglog.Database
      Egglog.Eval
      Egglog.Extract
      Egglog.Function
      Egglog.Pattern
      Egglog.Pretty
      Egglog.Rebuild
      Egglog.Rule
      Egglog.Sort
      Egglog.UnionFind
      Egglog.Value
      Eval.ANFInterpreter
      Eval.Interpreter
      IR.ANF
      IR.ANF.Resolved
      IR.ANF.Validate
      IR.Core
      Optimize.EgglogBackend
      Optimize.EgglogBackend.Encode
      Optimize.EgglogBackend.Extract
      Optimize.EgglogBackend.Fragment
      Optimize.EgglogBackend.Reconstruct
      Optimize.EgglogBackend.Rules
      Optimize.EgglogBackend.Schema
      Optimize.EGraph
      Optimize.Placeholder
      Optimize.Rewrite
      Optimize.Simplify
      Runtime.Int
      Syntax.AST
      Syntax.Located
      Syntax.Parser
      Syntax.Pretty
      Syntax.Span
      Typecheck.Infer
      Typecheck.Principal
      Typecheck.Types
